# DNSSwitch

./: .prettierignore  README.md  eslint.config.js  index.html  package-lock.json  package.json
.github/workflows/: releases.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  logger.rs  main.rs
src-tauri/src/commands/: chrome.rs  config.rs  dns.rs  mod.rs  schedule.rs  system.rs
src-tauri/src/config/: mod.rs  types.rs
src-tauri/src/dns/: chrome_dns.rs  doh.rs  dot.rs  history.rs  mod.rs  monitor.rs  provider.rs  query.rs  resolver.rs  schedule.rs  system_dns.rs  types.rs
src/components/AddRuleForm/: AddRuleForm.tsx  index.ts
src/components/AddServerForm/: AddServerForm.tsx  index.ts
src/components/DnsServerList/: DnsServerCard.tsx  DnsServerList.tsx  index.ts
src/components/DnsSwitcher/: DnsSwitcher.tsx  index.ts
src/components/HistoryPanel/: HistoryPanel.tsx
src/components/Layout/: Layout.tsx
src/components/Schedule/: SchedulePanel.tsx  ScheduleRule.tsx  index.ts
src/components/Settings/: Settings.tsx
src/components/StatusBar/: StatusBar.tsx
src/components/common/: Badge.tsx  Button.tsx  Card.tsx  ConfirmDialog.tsx  EmptyState.tsx  ErrorBoundary.tsx  LoadingSpinner.tsx  Modal.tsx  Select.tsx  Toast.tsx  forms.ts  index.ts  variants.ts
src/constants/: index.ts
src/hooks/: index.ts  useConfig.ts  useDnsServers.ts  useDnsStatus.ts  useNProgress.ts  useSystemInfo.ts
src/i18n/: index.ts
src/i18n/locales/: en.ts  zh.ts
src/lib/: log.ts
src/pages/: LogPage.tsx  QueryPage.tsx  SchedulePage.tsx  ServersPage.tsx  SettingsPage.tsx
src/stores/: configStore.ts  dnsStore.ts  index.ts  requestLogStore.ts  scheduleStore.ts  toastStore.ts
src/types/: config.ts  dns.ts  health.ts  index.ts  requestLog.ts  scheduleEvent.ts  system.ts
