[package]
name = "dnsswitch"
version = "0.0.1"
description = "一款基于 Tauri 和 Rust 打造的轻量级桌面 DNS 切换与智能调度工具。"
authors = ["chihqiang"]
edition = "2021"

[lib]
name = "dnsswitch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
