[package]
name = "DNSSwitch"
version = "0.0.1"
description = "一款基于 Tauri 和 Rust 打造的轻量级桌面 DNS 切换与智能调度工具。"
authors = ["chihqiang"]
edition = "2021"

[lib]
name = "dnsswitch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
fern = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
native-tls = "0.2"
image = "0.25"
directories = "5.0"
